# pataquesse

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: sample.csv
tests/: test_plot_data.py
