[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pataquesse_code"]

[project]
name = "pataquesse"
version = "0.1.0"
authors = [
    { name="Cyril K", email="cyrilk@tuta.io" },
]
description = "A starter repository for a Newby Python's Flying Project"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
    "pandas-stubs",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "matplotlib.*",
    "pandas.*",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
